Category pages are running

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -14,6 +14,7 @@
         &:hover {
             background-color: $lightOrange;
             border-color: $lightOrange;
+            color: #fff
         }
     }
     &-white {
