Creation of category and product detail pages

--- a/styles/components/keyComponents/_audioGear.scss
+++ b/styles/components/keyComponents/_audioGear.scss
@@ -4,6 +4,7 @@
     gap: 125px;
     max-width: 1110px;
     min-height: 588px;
+    margin: 0 auto;
 
     .textContainer {
         display: flex;
