--- a/components/CategoryHeader/header.module.css
+++ b/components/CategoryHeader/header.module.css
@@ -5,5 +5,7 @@
     justify-content: center;
     align-items: center;
     color: #fff;
+    margin-bottom: 160px;
+    text-transform: uppercase;
 
 }
