--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,9 @@
 // import category page styles
 @import './components/category/category';
 
+// import product detail page styles
+@import './components/ProductDetail/productDetail';
+
 html,
 body {
   padding: 0;
@@ -27,6 +30,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+
+  &:hover {
+    color: $orange;
+  }
 }
 
 * {
