--- a/styles/components/ProductDetail/ImageAndText/_imageandtext.scss
+++ b/styles/components/ProductDetail/ImageAndText/_imageandtext.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     gap: 125px;
-    &:nth-child(even) {
+    &:nth-child(odd) {
         flex-direction: row-reverse;
     }
 
@@ -22,5 +22,9 @@
         align-items: flex-start;
         gap: 32px;
         max-width: 445px;
+
+        .btn-group {
+            gap: 16px;
+        }
     }
 }
