--- a/styles/components/keyComponents/_navbar.scss
+++ b/styles/components/keyComponents/_navbar.scss
@@ -46,5 +46,8 @@
     width: 100%;
     max-width: 1110px;
 
+    @media only screen and (max-width: 1025px) {
+        display: none;
+    }
     }
 }
