--- a/styles/components/keyComponents/_productTiles.scss
+++ b/styles/components/keyComponents/_productTiles.scss
@@ -1,12 +1,17 @@
 .productTiles {
     min-height: 1300px;
     max-width: 1110px;
+    margin: 0 auto 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 48px;
-    margin-bottom: 200px;
+
+    @media only screen and (max-width: 1025px) {
+        padding: 0 20px;
+        margin-bottom: 120px;
+    }
 
     .product-speaker-zx9 {
         min-height: 560px;
@@ -48,6 +53,26 @@
             position: relative;
             top: 3.8em;
         }
+
+        @media only screen and (max-width: 1025px) {
+            min-width: 0;
+            flex-direction: column;
+            width: 100%;
+            padding: 52px 0 64px;
+            gap: 64px;
+
+            .imageContainer {
+                position: unset;
+                max-width: 197px;
+            }
+
+            .textContainer {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+        }
     }
 
     .product-speaker-zx7 {
@@ -77,6 +102,13 @@
                 color: $black;
                 border-color: $black;
             }
+        }
+
+        @media only screen and (max-width: 1025px) {
+            background-image: url('../../../public/assets/home/tablet/image-speaker-zx7.jpg');
+        }
+        @media only screen and (max-width: 768px) {
+            background-image: url('../../../public/assets/home/mobile/image-speaker-zx7.jpg');
         }
     }
 
@@ -116,6 +148,32 @@
                     color: $black;
                     border-color: $black;
                 }
+            }
+        }
+
+        @media only screen and (max-width: 1025px) {
+            gap: 10px;
+            .image {
+                background-image: url('../../../public/assets/home/tablet/image-earphones-yx1.jpg');
+            }
+            .tile {
+                min-width: 50%;
+                justify-content: center;
+
+                .textContainer {
+                    position: unset;
+                }
+            }
+        }
+
+        @media only screen and (max-width: 768px) {
+            flex-direction: column;
+            .image {
+                background-image: url('../../../public/assets/home/mobile/image-earphones-yx1.jpg');
+            }
+
+            .tile {
+                height: 200px;
             }
         }
     }
