--- a/styles/components/keyComponents/_tiles.scss
+++ b/styles/components/keyComponents/_tiles.scss
@@ -5,6 +5,15 @@
     align-items: center;
     margin: 120px 0 168px;
 
+    @media only screen and (max-width: 1025px) {
+        gap: 10px;
+        margin: 96px 0;
+    }
+    @media only screen and (max-width: 767px) {
+        gap: 68px;
+        flex-direction: column;
+    }
+
     .tile {
         width: 350px;
         height: 204px;
@@ -25,6 +34,15 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+        }
+
+        @media only screen and (max-width: 1025px) {
+            max-width: 233px;
+            max-height: 165px;
+        }
+        @media only screen and (max-width: 767px) {
+            min-width: 327px;
+            max-height: 165px;
         }
     }
 }
