Made additions to the product detail pages. Added detailed comments using new tool to make sure all content on my site has comments that are readable.

--- a/styles/components/ProductDetail/_productDetail.scss
+++ b/styles/components/ProductDetail/_productDetail.scss
@@ -20,5 +20,6 @@
     @import './ImageAndText/imageandtext';
     @import './ImageAndText/featuresBox';
     @import './Gallery/gallery';
+    @import './Others/others';
 
 }
