Adjustment to the addproduct function to correctly add a product if its new or not

--- a/styles/components/keyComponents/_navbar.scss
+++ b/styles/components/keyComponents/_navbar.scss
@@ -35,6 +35,10 @@
             background-size: cover;
             width: 23px;
             height: 20px;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
