Completion of the cart

--- a/styles/components/checkout/_checkout.scss
+++ b/styles/components/checkout/_checkout.scss
@@ -1,6 +1,6 @@
 .checkout {
     max-width: 1110px;
-    margin: 0 auto;
+    margin: 240px auto 0;
     display: flex;
     flex-direction: column;
 
