--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,6 +21,9 @@
 // import checkout page styles
 @import './components/checkout/checkout';
 
+// import cart styles
+@import './components/cart/cart';
+
 
 .wrapper {
   max-width: 1110px;
