--- a/components/QuantityBox/styles.module.css
+++ b/components/QuantityBox/styles.module.css
@@ -1,6 +1,6 @@
 .btn {
-    background-color: #f1f1f1;
-    border: none;
+    background-color: #f1f1f1 !important;
+    border: none !important;
     color: #000;
 }
 
