footer module is built with all mobile styling included

--- a/styles/components/ProductDetail/Gallery/_gallery.scss
+++ b/styles/components/ProductDetail/Gallery/_gallery.scss
@@ -28,4 +28,37 @@
         background-position: center center;
         border-radius: 8px;
     }
+
+    @media only screen and (max-width: 1025px) {
+        .left-side {
+            .top,
+            .bottom {
+                min-width: 227px;
+                min-height: 174px;
+            }
+        }
+
+        .right-side {
+            min-width: 395px;
+            min-height: 368px;
+        }
+    }
+
+    @media only screen and (max-width: 767px) {
+        flex-direction: column;
+        align-items: center;
+
+        .left-side {
+            .top,
+            .bottom {
+                min-width: 327px;
+                min-height: 174px;
+            }
+        }
+
+        .right-side {
+            min-width: 327px;
+            min-height: 368px;
+        }
+    }
 }
