--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,7 @@
 @import './components/keyComponents/tiles';
 @import './components/keyComponents/productTiles';
 @import './components/keyComponents/audioGear';
+@import './components/keyComponents/footer';
 
 // import category page styles
 @import './components/category/category';
