--- a/styles/components/ProductDetail/_productDetail.scss
+++ b/styles/components/ProductDetail/_productDetail.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     gap: 160px;
 
+    @media only screen and (max-width: 1025px) {
+        gap: 96px;
+    }
+
     // .back {
     //     background-color: transparent;
     //     border: none;
