--- a/styles/components/keyComponents/_audioGear.scss
+++ b/styles/components/keyComponents/_audioGear.scss
@@ -4,7 +4,7 @@
     gap: 125px;
     max-width: 1110px;
     min-height: 588px;
-    margin: 0 auto;
+    margin: 0 auto 96px;
 
     .textContainer {
         display: flex;
@@ -42,7 +42,7 @@
         }
     }
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 767px) {
         gap: 40px;
         .image {
             background-image: url('../../../public/assets/shared/mobile/image-best-gear.jpg');
