fixes for the back button styling

--- a/components/BackButton/styles.module.css
+++ b/components/BackButton/styles.module.css
@@ -4,8 +4,7 @@
     color: #000;
     text-transform: capitalize;
     display: flex;
-    position: relative;
-    top: 79px;
+    margin: 79px 0;
     opacity: .5;
 }
 
