fixes for the checkout page styling

--- a/styles/components/checkout/_checkout.scss
+++ b/styles/components/checkout/_checkout.scss
@@ -2,6 +2,7 @@
     max-width: 1110px;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 
     .form {
         background-color: $white;
