--- a/styles/components/cart/_cart.scss
+++ b/styles/components/cart/_cart.scss
@@ -1,5 +1,5 @@
 .ReactModal__Overlay.ReactModal__Overlay--after-open {
-    position: absolute !important;
+    background-color: rgba(0, 0, 0, 0.75) !important;
 
     @media only screen and (max-width: 767px) {
         display: flex;
@@ -9,16 +9,31 @@
 #cartModal {
     width: 377px;
     left: unset !important;
-    right: 165px !important;
-    top: 8em !important;
-    height: 488px;
+    right: 0px !important;
+    top: 0em !important;
+    position: fixed;
+    background-color: #f1f1f1;
+    height: 100%;
 
     .modal-dialog {
+        height: 100%;
         .modal-content {
+            height: 100%;
+            background-color: #f1f1f1;
+
+            .modal-header {
+                background-color: $white;
+                padding: 1em;
+            }
             .modal-body {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                justify-content: center;
                 .top {
                     display: flex;
                     justify-content: space-between;
+                    background-color: $white;
                 }
                 .products {
                     ul {
@@ -50,13 +65,51 @@
                                     }
                                 }
                             }
+                            .right {
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                button {
+                                    background: #f1f1f1;
+                                    color: $black;
+                                    border: none;
+
+                                    &:focus {
+                                        box-shadow: none;
+                                        transform: scale(1.0005);
+                                    }
+                                }
+
+                                .count {
+                                    min-width: 1em;
+                                    display: flex;
+                                    justify-content: center;
+                                }
+                            }
                         }
                     }
                 }
+                .emptyCart {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 1em;
 
+                    p {
+                        text-transform: uppercase;
+                        color: $black;
+                        font-weight: 700;
+                    }
+                }
+            }
+
+            .modal-footer {
                 .total {
                     display: flex;
                     justify-content: space-between;
+                    background-color: $white;
+                    padding: 1em;
+                    width: 100%;
 
                     p {
                         font-weight: 500;
@@ -65,6 +118,11 @@
                         text-transform: uppercase;
                         opacity: .5;
                     }
+                }
+                .btn {
+                    min-width: 98%;
+                    margin: 0 auto;
+                    min-height: 60px;
                 }
             }
         }
