--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&display=swap');
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/animate.css/animate.min.css';
 
 main {
   display: flex;
